k8s/booking-app/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: booking-app
  namespace: fonteyn-dev
spec:
  type: LoadBalancer
  selector:
    app: booking-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
