k8s/booking-app/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: booking-app
  namespace: fonteyn-dev
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: webapprouting.kubernetes.azure.com
  rules:
    - host: booking.fonteyn.nl
      http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: booking-api
                port:
                  number: 3000
          - path: /
            pathType: Prefix
            backend:
              service:
                name: booking-app
                port:
                  number: 80
